# gap

./: README.md  gap.cabal
Generator/: Predicate.hs
examples/: Expr.hs
src/Generator/: Predicate.hs
