name:                gap
version:             0.1.0.0
synopsis: Generators as predicates
-- description:
homepage:            https://github.com/Lysxia/gap#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2017 Li-yao Xia
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Generator.Predicate
  build-depends:
    profunctors,
    QuickCheck,
    base >= 4.9 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/gap
